[package]
name = "cdd"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
homepage = "https://compilers.com.au"
readme = "README.md"
repository = "https://github.com/offscale/cdd-core"
description = "cdd-core is a Rust library exposing base abstract types useful for Compiler Driven Development (CDD)."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
